[package]
name = "ast-toolkit-2-macros"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
license.workspace = true
repository.workspace = true
description = "Macros for the `ast-toolkit-2`-library."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"


[features]
default = []

railroad = []
